fix: z-index input

--- a/src/components/filters/searchBar/searchBar.module.scss
+++ b/src/components/filters/searchBar/searchBar.module.scss
@@ -1,7 +1,7 @@
 .formContainer {
     margin-bottom: 40px;
     position: relative;
-    z-index: 4;
+    z-index: 0;
 }
 
 .inputDiv {
