--- a/src/components/navbar/page.module.scss
+++ b/src/components/navbar/page.module.scss
@@ -9,6 +9,7 @@
     display: flex;
     padding-left: 0.5em;
     position: fixed;
+    z-index: 2;
 }
 
 .container {
